[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts and themes/Silkscreen-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://MenuAssets/keyw.png" type="Texture" id=3]
[ext_resource path="res://MenuAssets/mouse1.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Crosshair.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds and music/Music/MainMenuMusic.ogg" type="AudioStream" id=7]
[ext_resource path="res://MenuAssets/spaceLeft.png" type="Texture" id=8]
[ext_resource path="res://MenuAssets/spaceRight.png" type="Texture" id=9]
[ext_resource path="res://MenuAssets/spaceMid.png" type="Texture" id=10]
[ext_resource path="res://MenuAssets/musicOn.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=2]
size = 22
outline_size = 2
outline_color = Color( 0.0156863, 0, 0.0431373, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.105882, 0.00784314, 0.345098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0705882, 0.00784314, 0.164706, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.301961, 0.0431373, 0.941176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0705882, 0.00784314, 0.164706, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.2, 0.027451, 0.627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0705882, 0.00784314, 0.164706, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.160784, 0.117647, 0.380392, 0.623529 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.109804, 0.00392157, 0.101961, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=8]
size = 22
outline_size = 2
outline_color = Color( 0.0431373, 0.00392157, 0.0470588, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 17
outline_size = 1
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 56
outline_size = 2
outline_color = Color( 0.686275, 0.0431373, 0.776471, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -72.0
margin_right = 119.0
margin_bottom = 45.0
custom_constants/separation = 50

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
margin_right = 238.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "Start game"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 238.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "Quit"

[node name="PanelContainer" type="Panel" parent="."]
margin_left = 51.0
margin_top = 345.0
margin_right = 315.0
margin_bottom = 573.0
custom_styles/panel = SubResource( 7 )

[node name="ControlsLabel" type="Label" parent="PanelContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -99.0
margin_top = 13.0
margin_right = 61.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.486275, 0, 0.501961, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Controls:"

[node name="ControlsLabel2" type="Label" parent="PanelContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.5
margin_top = 67.0
margin_right = 83.5
margin_bottom = 92.0
custom_colors/font_color = Color( 0.470588, 0, 0.486275, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Move"

[node name="ControlsLabel3" type="Label" parent="PanelContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.5
margin_top = 122.0
margin_right = 102.5
margin_bottom = 147.0
custom_colors/font_color = Color( 0.423529, 0, 0.439216, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Shoot"

[node name="ControlsLabel4" type="Label" parent="PanelContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.5
margin_top = 173.0
margin_right = 102.5
margin_bottom = 198.0
custom_colors/font_color = Color( 0.423529, 0, 0.439216, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Boost"

[node name="KeyW" type="Sprite" parent="PanelContainer"]
position = Vector2( 36, 80 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Mouse1" type="Sprite" parent="PanelContainer"]
position = Vector2( 36, 138 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="SpaceLeft" type="Sprite" parent="PanelContainer"]
position = Vector2( 32, 189 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="SpaceMid" type="Sprite" parent="PanelContainer"]
position = Vector2( 52, 189 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="SpaceRight" type="Sprite" parent="PanelContainer"]
position = Vector2( 70, 189 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="LabelGameName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -280.0
margin_top = 30.0
margin_right = 280.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0.0745098, 0.364706, 0.572549, 1 )
custom_colors/font_outline_modulate = Color( 0.956863, 0, 0.760784, 1 )
custom_fonts/font = SubResource( 6 )
text = "KAMIKAZE ALIENS"

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = 920.0
margin_top = 500.0
margin_right = 983.0
margin_bottom = 561.0
texture_normal = ExtResource( 12 )
expand = true

[node name="Crosshair" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
